# streamlit-tts-kokoro

./: README.md  constants.py  homepage.py  justfile  pyproject.toml  utils.py
.streamlit/: config.toml
static/: styles.css
