[project]
name = "tts-kokoro"
version = "0.1.0"
description = "Text-to-Speech Kokoro with Streamlit"
authors = [{name = "Hamid Basri", email = "dev.hamidbasri@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kokoro>=0.9.4",
    "pip>=25.2",
    "soundfile>=0.13.1",
    "streamlit>=1.50.0",
    "streamlit-shortcuts>=1.2.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "watchdog>=6.0.0",
]
