[project]
name = "tts-kokoro"
version = "0.1.0"
description = "Text-to-Speech Kokoro with Streamlit"
authors = [{name = "Hamid Basri", email = "dev.hamidbasri@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "en-core-web-sm",
    "kokoro>=0.9.4",
    "pip>=25.2",
    "soundfile>=0.13.1",
    "spacy>=3.8.7",
    "streamlit>=1.50.0",
    "streamlit-shortcuts>=1.2.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
